# skills

./: Dockerfile.filter  LICENSE  README.md  install.sh  pyproject.toml
.claude-plugin/: plugin.json
sandbox/: Dockerfile  pyproject.toml
sandbox/src/tvly_sandbox/: __init__.py  filter_agent.py  tavily_tools.py
skills/tavily/: SKILL.md
skills/tavily-cli/: SKILL.md
skills/tavily-crawl/: SKILL.md
skills/tavily-dynamic-search/: SKILL.md
skills/tavily-dynamic-search/references/: ptc.md
skills/tavily-extract/: SKILL.md
skills/tavily-map/: SKILL.md
skills/tavily-research/: SKILL.md
skills/tavily-search/: SKILL.md
skills/tavily-search-filter/: SKILL.md
skills/tavily/crawl/: SKILL.md
skills/tavily/crawl/scripts/: crawl.sh
skills/tavily/extract/: SKILL.md
skills/tavily/extract/scripts/: extract.sh
skills/tavily/references/: crawl.md  extract.md  integrations.md  research.md  search.md
skills/tavily/research/: SKILL.md
skills/tavily/research/scripts/: research.sh
skills/tavily/search/: SKILL.md
skills/tavily/search/scripts/: search.sh
skills/tavily/tavily-best-practices/: SKILL.md
tavily_cli/: README.md  __init__.py  cli.py  common.py  config.py  filter_agent.py  mcp_client.py  output.py  repl.py  sandbox.py  theme.py
tavily_cli/commands/: auth.py  crawl.py  extract.py  map_cmd.py  research.py  search.py  skills.py
